--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "native-base": "^2.3.7",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
+    "react-native-radio-buttons": "^1.0.0",
+    "react-native-simple-radio-button": "^2.7.1",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.0.0-beta.21"
+    "react-navigation": "^1.0.0-beta.21",
+    "react-toggle": "^4.0.2",
+    "toggle-switch-react-native": "^0.2.0"
   },
   "name": "demo-project",
   "version": "0.0.0",
