--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-simple-radio-button": "^2.7.1",
+    "react-native-switch": "^1.3.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-toggle": "^4.0.2",
