--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "firebase": "^4.9.0",
     "native-base": "^2.3.7",
     "react": "16.0.0-beta.5",
+    "react-dropdown": "^1.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
+    "react-native-modal-dropdown": "^0.6.1",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-simple-radio-button": "^2.7.1",
     "react-native-switch": "^1.3.0",
