--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-radio-buttons": "^1.0.0",
     "react-native-simple-radio-button": "^2.7.1",
     "react-native-switch": "^1.3.0",
+    "react-native-table-component": "^1.1.3",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-toggle": "^4.0.2",
